--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<%= yield %>
+  <% flash.each do |key, message| %>
+    <div><%= message %></div>
+  <% end %>
+  
+  <%= yield %>
 
 </body>
 </html>
