--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 	</button>
       </div>
 
-      <div class=""collapse navbar-collapse" id="collapse">
+      <div class="collapse navbar-collapse" id="collapse">
 	<ul class="nav navbar-nav">
 	  <li class="<%= "active" if current_page?("/") %>">
 	    <%= link_to "Home", root_path %>
