--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,3 +22,12 @@
 </header>
 
 <p><%= @project.description %></p>
+
+<ul id="tickets">
+  <% @project.tickets.each do |ticket| %>
+    <li>
+      #<%= ticket.id %> -
+      <%= link_to ticket.name, [@project, ticket] %>
+    </li>
+    <% end %>
+</ul>
