Link tickets with users upon ticket creation.

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,7 +1,8 @@
-<h2>Resend confirmation instructions</h2>
+<header>
+  <h1>Resend confirmation instructions</h1>
+</header>
 
 <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
 
   <div class="form-inputs">
@@ -9,7 +10,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
+    <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-primary" %>
   </div>
 <% end %>
 
